# Mail-Patcher

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cpp  config.h  errors.h  main.cpp  nwc24dl.cpp  nwc24dl.h  patcher.cpp  patcher.h  toolchain-powerpc.cmake  utils.cpp  utils.h
apps/Mail-Patcher/: meta.xml
